# jirahub

./: .coveragerc  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
jira_app/: apps.py  urls.py  views.py
jira_app/templates/jira_app/accounts/: detail.html  list.html
jira_app/templates/jira_app/boards/: detail.html
jira_app/templates/jira_app/comments/: list.html
jira_app/templates/jira_app/history/: list.html
jira_app/templates/jira_app/issues/: children_list.html  detail.html  list.html  partial_list.html
jira_app/templates/jira_app/projects/: detail.html
jira_app/templatetags/: jira_tags.py
jirahub/: .env  asgi.py  env.example  settings.py  urls.py  wsgi.py
static/css/: cirrus-all.min.css
static/js/ext/: client-side-templates.js
templates/: base.html
